--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
 </head>
 <body>
    
+    <h2 id="title">welcome to play with DOM</h2>
+    <ul id="li-container" class="lists">
+        <li class="li-items">first</li>
+        <li class="li-items">second</li>
+        <li class="li-items">third</li>
+        <li class="li-items">fourth</li>
+    </ul>
+    <h2>Lets traverse the DOM element</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, unde.</p>
+    <p>Adipisci nesciunt tenetur eos laborum non praesentium sunt eum. Minima.</p>
+    <p>Quis delectus minus inventore molestias at nisi perspiciatis deserunt asperiores.</p>
+
     
 
-
-
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
+
 </html>
